--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,3 @@
 <div id="root"></div>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
